metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/becquerel_mi_incident_project_data__x.object-meta.xml
<CustomObject>
    <description>becquerel__mi_incident_project_data</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__mi_incident_project_data</externalName>
    <label>becquerel__mi_incident_project_data</label>
    <pluralLabel>becquerel__mi_incident_project_data</pluralLabel>
</CustomObject>