metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/becquerel_lastmod__c.field-meta.xml
<CustomField>
    <fullName>becquerel_lastmod__c</fullName>
    <description>becquerel_lastmod</description>
    <externalDeveloperName>becquerel_lastmod</externalDeveloperName>
    <label>becquerel_lastmod</label>
    <type>DateTime</type>
</CustomField>