metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/bid_pk_id__c.field-meta.xml
<CustomField>
    <fullName>bid_pk_id__c</fullName>
    <description>bid_pk_id</description>
    <externalDeveloperName>bid_pk_id</externalDeveloperName>
    <label>bid_pk_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>