metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/business_name__c.field-meta.xml
<CustomField>
    <fullName>business_name__c</fullName>
    <description>business_name</description>
    <externalDeveloperName>business_name</externalDeveloperName>
    <label>business_name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>