metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/customer_email__c.field-meta.xml
<CustomField>
    <fullName>customer_email__c</fullName>
    <description>customer_email</description>
    <externalDeveloperName>customer_email</externalDeveloperName>
    <label>customer_email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>