metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/customer_first_name__c.field-meta.xml
<CustomField>
    <fullName>customer_first_name__c</fullName>
    <description>customer_first_name</description>
    <externalDeveloperName>customer_first_name</externalDeveloperName>
    <label>customer_first_name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>