metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/customer_is_disabled__c.field-meta.xml
<CustomField>
    <fullName>customer_is_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>customer_is_disabled</description>
    <externalDeveloperName>customer_is_disabled</externalDeveloperName>
    <label>customer_is_disabled</label>
    <type>Checkbox</type>
</CustomField>