metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/customer_lifetime_avg_review_rating__c.field-meta.xml
<CustomField>
    <fullName>customer_lifetime_avg_review_rating__c</fullName>
    <description>customer_lifetime_avg_review_rating</description>
    <externalDeveloperName>customer_lifetime_avg_review_rating</externalDeveloperName>
    <label>customer_lifetime_avg_review_rating</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>