metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/customer_lifetime_number_reviews__c.field-meta.xml
<CustomField>
    <fullName>customer_lifetime_number_reviews__c</fullName>
    <description>customer_lifetime_number_reviews</description>
    <externalDeveloperName>customer_lifetime_number_reviews</externalDeveloperName>
    <label>customer_lifetime_number_reviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>