metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/customer_signup_date__c.field-meta.xml
<CustomField>
    <fullName>customer_signup_date__c</fullName>
    <description>customer_signup_date</description>
    <externalDeveloperName>customer_signup_date</externalDeveloperName>
    <label>customer_signup_date</label>
    <type>DateTime</type>
</CustomField>