metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/hired__c.field-meta.xml
<CustomField>
    <fullName>hired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>hired</description>
    <externalDeveloperName>hired</externalDeveloperName>
    <label>hired</label>
    <type>Checkbox</type>
</CustomField>