metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/hired_time__c.field-meta.xml
<CustomField>
    <fullName>hired_time__c</fullName>
    <description>hired_time</description>
    <externalDeveloperName>hired_time</externalDeveloperName>
    <label>hired_time</label>
    <type>DateTime</type>
</CustomField>