metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/most_recent_phone_number__c.field-meta.xml
<CustomField>
    <fullName>most_recent_phone_number__c</fullName>
    <description>most_recent_phone_number</description>
    <externalDeveloperName>most_recent_phone_number</externalDeveloperName>
    <label>most_recent_phone_number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>