metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_avg_rating__c.field-meta.xml
<CustomField>
    <fullName>pro_avg_rating__c</fullName>
    <description>pro_avg_rating</description>
    <externalDeveloperName>pro_avg_rating</externalDeveloperName>
    <label>pro_avg_rating</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>