metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_del_reason__c.field-meta.xml
<CustomField>
    <fullName>pro_del_reason__c</fullName>
    <description>pro_del_reason</description>
    <externalDeveloperName>pro_del_reason</externalDeveloperName>
    <label>pro_del_reason</label>
    <length>128</length>
    <type>Text</type>
</CustomField>