metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_email__c.field-meta.xml
<CustomField>
    <fullName>pro_email__c</fullName>
    <description>pro_email</description>
    <externalDeveloperName>pro_email</externalDeveloperName>
    <label>pro_email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>