metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_first_name__c.field-meta.xml
<CustomField>
    <fullName>pro_first_name__c</fullName>
    <description>pro_first_name</description>
    <externalDeveloperName>pro_first_name</externalDeveloperName>
    <label>pro_first_name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>