metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_is_disabled__c.field-meta.xml
<CustomField>
    <fullName>pro_is_disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>pro_is_disabled</description>
    <externalDeveloperName>pro_is_disabled</externalDeveloperName>
    <label>pro_is_disabled</label>
    <type>Checkbox</type>
</CustomField>