metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_last_quote_time__c.field-meta.xml
<CustomField>
    <fullName>pro_last_quote_time__c</fullName>
    <description>pro_last_quote_time</description>
    <externalDeveloperName>pro_last_quote_time</externalDeveloperName>
    <label>pro_last_quote_time</label>
    <type>DateTime</type>
</CustomField>