metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_num_reviews__c.field-meta.xml
<CustomField>
    <fullName>pro_num_reviews__c</fullName>
    <description>pro_num_reviews</description>
    <externalDeveloperName>pro_num_reviews</externalDeveloperName>
    <label>pro_num_reviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>