metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_quotes_last_30__c.field-meta.xml
<CustomField>
    <fullName>pro_quotes_last_30__c</fullName>
    <description>pro_quotes_last_30</description>
    <externalDeveloperName>pro_quotes_last_30</externalDeveloperName>
    <label>pro_quotes_last_30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>