metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_signup_date__c.field-meta.xml
<CustomField>
    <fullName>pro_signup_date__c</fullName>
    <description>pro_signup_date</description>
    <externalDeveloperName>pro_signup_date</externalDeveloperName>
    <label>pro_signup_date</label>
    <type>DateTime</type>
</CustomField>