metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_submitted_dob__c.field-meta.xml
<CustomField>
    <fullName>pro_submitted_dob__c</fullName>
    <description>pro_submitted_dob</description>
    <externalDeveloperName>pro_submitted_dob</externalDeveloperName>
    <label>pro_submitted_dob</label>
    <length>128</length>
    <type>Text</type>
</CustomField>