metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_tenure__c.field-meta.xml
<CustomField>
    <fullName>pro_tenure__c</fullName>
    <description>pro_tenure</description>
    <externalDeveloperName>pro_tenure</externalDeveloperName>
    <label>pro_tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>