metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_url_code__c.field-meta.xml
<CustomField>
    <fullName>pro_url_code__c</fullName>
    <description>pro_url_code</description>
    <externalDeveloperName>pro_url_code</externalDeveloperName>
    <label>pro_url_code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>