metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/pro_user_id__c.field-meta.xml
<CustomField>
    <fullName>pro_user_id__c</fullName>
    <description>pro_user_id</description>
    <externalDeveloperName>pro_user_id</externalDeveloperName>
    <label>pro_user_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>