metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/proassist_on__c.field-meta.xml
<CustomField>
    <fullName>proassist_on__c</fullName>
    <defaultValue>false</defaultValue>
    <description>proassist_on</description>
    <externalDeveloperName>proassist_on</externalDeveloperName>
    <label>proassist_on</label>
    <type>Checkbox</type>
</CustomField>