metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/request_category__c.field-meta.xml
<CustomField>
    <fullName>request_category__c</fullName>
    <description>request_category</description>
    <externalDeveloperName>request_category</externalDeveloperName>
    <label>request_category</label>
    <length>128</length>
    <type>Text</type>
</CustomField>