metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/request_city__c.field-meta.xml
<CustomField>
    <fullName>request_city__c</fullName>
    <description>request_city</description>
    <externalDeveloperName>request_city</externalDeveloperName>
    <label>request_city</label>
    <length>128</length>
    <type>Text</type>
</CustomField>