metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/request_create_time__c.field-meta.xml
<CustomField>
    <fullName>request_create_time__c</fullName>
    <description>request_create_time</description>
    <externalDeveloperName>request_create_time</externalDeveloperName>
    <label>request_create_time</label>
    <type>DateTime</type>
</CustomField>