metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/request_id__c.field-meta.xml
<CustomField>
    <fullName>request_id__c</fullName>
    <description>request_id</description>
    <externalDeveloperName>request_id</externalDeveloperName>
    <label>request_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>