metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/request_state__c.field-meta.xml
<CustomField>
    <fullName>request_state__c</fullName>
    <description>request_state</description>
    <externalDeveloperName>request_state</externalDeveloperName>
    <label>request_state</label>
    <length>128</length>
    <type>Text</type>
</CustomField>