metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/request_zip__c.field-meta.xml
<CustomField>
    <fullName>request_zip__c</fullName>
    <description>request_zip</description>
    <externalDeveloperName>request_zip</externalDeveloperName>
    <label>request_zip</label>
    <length>128</length>
    <type>Text</type>
</CustomField>