metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/review_rating__c.field-meta.xml
<CustomField>
    <fullName>review_rating__c</fullName>
    <description>review_rating</description>
    <externalDeveloperName>review_rating</externalDeveloperName>
    <label>review_rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>