metadata-sfdx/force-app/main/default/objects/becquerel_mi_incident_project_data__x/fields/service_is_activated__c.field-meta.xml
<CustomField>
    <fullName>service_is_activated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>service_is_activated</description>
    <externalDeveloperName>service_is_activated</externalDeveloperName>
    <label>service_is_activated</label>
    <type>Checkbox</type>
</CustomField>